todo: fix errors with search + redux errors

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,6 +23,10 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "src/**/*.ts", "package.json"],
-  "files": ["utils/GetPaintingData.ts", "hooks/UsePaintingData.ts"]
+  "include": ["src"],
+  "files": [
+    "utils/GetPaintingData.ts",
+    "hooks/UsePaintingData.ts",
+    "redux/store.ts"
+  ]
 }
