--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "eslint-config-airbnb-typescript": "^18.0.0",
+    "framer-motion": "^11.2.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "sass": "^1.77.6"
