did some  things

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,6 +29,13 @@
     "hooks/UsePaintingData.ts",
     "utils/GetAuthorsData.ts",
     "hooks/UseAuthorsData.ts",
-    "redux/store.ts"
+    "utils/GetLocationsData.ts",
+    "hooks/UseLocationsData.ts",
+
+    "redux/store.ts",
+    "redux/optionsSlice/slice.ts",
+    "redux/optionsSlice/selector.ts",
+    "redux/filterSlice/selector.ts",
+    "redux/filterSlice/slice.ts"
   ]
 }
