--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy":"gh-pages -d dist",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.0",
     "sass": "^1.77.6"
   },
   "devDependencies": {
